[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/ArcherRightBow.png" type="Texture" id=1]
[ext_resource path="res://Assets/ArcherRight.png" type="Texture" id=2]
[ext_resource path="res://Entities/Archer.gd" type="Script" id=3]
[ext_resource path="res://Entities/Bow.gd" type="Script" id=4]
[ext_resource path="res://Assets/ShotReady.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72.8459, 117.231 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="ShootForce" type="ColorRect" parent="."]
margin_left = -64.6356
margin_top = -156.134
margin_right = -64.6356
margin_bottom = -146.134
color = Color( 0.996078, 0.0352941, 0.258824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotReady" type="Sprite" parent="."]
position = Vector2( -26.9284, -150.416 )
texture = ExtResource( 5 )

[node name="ArcherBody" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -23.3597, 22.6923 )
shape = SubResource( 1 )

[node name="Bow" type="Sprite" parent="."]
position = Vector2( 37.9296, 32.7272 )
texture = ExtResource( 1 )
offset = Vector2( 54.2626, -4.37898 )
script = ExtResource( 4 )

[node name="ShootingPoint" type="Position2D" parent="Bow"]
position = Vector2( 94.2193, -12.7046 )
